--- a/forecasting_net_prophet.ipynb
+++ b/forecasting_net_prophet.ipynb
@@ -2118,9 +2118,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** Does a predictable relationship exist between the lagged search traffic and the stock volatility or between the lagged search traffic and the stock price returns?\n",
+    "**Question:** Does a predictable relationship exist between the lagged search traffic and the stock volatility or between the lagged search traffic and stock price returns?\n",
     "\n",
-    "**Answer:** It seems there's definitely a inverse correlation between the lagged search trends and the stock volatility columns."
+    "**Answer:** There's definitely an inverse correlation between the lagged search trends and the stock volatility columns."
    ]
   },
   {
@@ -2250,7 +2250,7 @@
    "source": [
     "**Question:**  How's the near-term forecast for the popularity of MercadoLibre?\n",
     "\n",
-    "**Answer:** It looks positive according to the data and seems to forecast a near-term popularity.\n"
+    "**Answer:** It looks positive and according to the data seems to forecast a near-term popularity.\n"
    ]
   },
   {
@@ -2327,7 +2327,7 @@
    "source": [
     "**Question:** What time of day exhibits the greatest popularity?\n",
     "\n",
-    "**Answer:** It looks like Midnight."
+    "**Answer:** It appears to be Midnight."
    ]
   },
   {
@@ -2345,7 +2345,7 @@
    "source": [
     "**Question:** What's the lowest point for search traffic in the calendar year?\n",
     "\n",
-    "**Answer:** It looks like early October.\n"
+    "**Answer:** It looks to be in early October.\n"
    ]
   },
   {
@@ -2500,7 +2500,7 @@
    "source": [
     "**Question:** For example, what are the peak revenue days? (Mondays? Fridays? Something else?)\n",
     "\n",
-    "**Answer:** # The top 3 peak revenue days in order look to be Wed., Tues. and Mon."
+    "**Answer:** # The top 3 peak revenue days in order are: Wed., Tues., Mon."
    ]
   },
   {
@@ -2572,7 +2572,7 @@
    "source": [
     "### Based on the forecast information generated above, produce a sales forecast for the finance division, giving them a number for expected total sales next quarter. Include best and worst case scenarios, to better help the finance team plan.\n",
     "\n",
-    "**Answer:** Based on the information generated q3/2020 revenue will be $969,572,683.  Worst case q3/2020 revenue could be $887,525,372, but best case scenario for the q3/2020 revenue woud be $1,051,650,789."
+    "**Answer:** Based on the information generated third quarter 2020 revenue will be $969,572,683.  Worst case third quarter 2020 revenue could be $887,525,372, but best case scenario for the third quarter revenue would be $1,051,650,789."
    ]
   }
  ],
